src/app.css
@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

@import "tailwindcss";
@config "../tailwind.config.js";


@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 346.8 77.2% 49.8%;
    --primary-foreground: 355.7 100% 97.3%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 72.22% 50.59%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 346.8 77.2% 49.8%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 20 14.3% 4.1%;
    --foreground: 0 0% 95%;
    --card: 24 9.8% 10%;
    --card-foreground: 0 0% 95%;
    --popover: 0 0% 9%;
    --popover-foreground: 0 0% 95%;
    --primary: 346.8 77.2% 49.8%;
    --primary-foreground: 355.7 100% 97.3%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 15%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 12 6.5% 15.1%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 346.8 77.2% 49.8%;
  }
}
 
@layer base {
  * {
    @apply border-border;
    @apply leading-normal;
  }
  body {
    @apply bg-background text-foreground;
  }
}


:root {
  font-family: 'Geist', sans-serif;
  font-optical-sizing: auto;
  --page-padding: 1rem;
  --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
  --transition: 0.3s var(--ease-out-expo);
}

.transition {
  transition: var(--transition);
}

strong {
  color: hsla(var(--foreground) / 90%);
}

a strong {
  color: hsla(var(--primary) / 90%);
}

h1 {
  font-size: 2rem;
  font-weight: 500;
  margin: 0;
}

h2 {
  font-size: 1.5rem;
  font-weight: 500;
  margin: 0;
}

h3 {
  font-size: 1.25rem;
  font-weight: 500;
  margin: 0;
}

h4 {
  font-size: 1rem;
  font-weight: 500;
  margin: 0;
}

h5 {
  font-size: 0.875rem;
  font-weight: 500;
  margin: 0;
}

h6 {
  font-size: 0.75rem;
  font-weight: 500;
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  margin-block-start: 2rem;
} 


li p {
  display: inline;
}

.markdown a:not(:has(*)) {
  color: hsla(var(--primary));
  text-decoration: none;
}

/* table {
  border: 2px solid hsla(var(--muted-foreground));
  border-radius: 8px;
  border-collapse: separate;
}

table * {
  padding: 1rem;
} */

.advisory {
  padding: 1rem;
  width: fit-content;
  margin: 0 auto;

  text-align: center;

  background: hsl(var(--destructive));
  color: hsl(var(--destructive-foreground));
  font-weight: 700;
  border-radius: var(--radius);
}

.markdown ul li::before {
  content: "-";
  margin-right: 0.5rem;
}

.markdown ol {
  list-style-type: decimal;
  padding-inline-start: 1rem;
}

.markdown ol li {
  margin-block: 0.5rem;
  padding-inline-start: 0.25rem;
}

.markdown ol li::marker {
  margin-right: 2rem;
}

mark {
  --mark-opacity: 0.3;
  background: rgba(33, 150, 243, var(--mark-opacity));
  padding: 0;
  color: inherit;
}

mark[red] {
  background: rgba(255, 0, 0, var(--mark-opacity));
}

mark[yellow] {
  background: rgba(255, 235, 59, var(--mark-opacity));
}

mark[blue] {
  background: rgba(33, 150, 243, var(--mark-opacity));
}

.sticky-top {
  position: sticky;
  top: var(--page-padding);
}

mark[area] {
  display: block;
  padding: 0.5rem 1rem;
  margin: 0.25rem 0;
  border-radius: var(--radius);
}

hr {
  margin-block: 0.5rem 1rem ;
}

h1 {
  position: sticky;
  top: 0;
  background: black;
  margin-block-start: 0;
  padding-block-start: 2rem;
  z-index: 1;
}

 h1 ~ h2 {
  position: sticky;
  top: 5rem;
  background: black;
  z-index: 1;
}

blockquote {
  padding: 1rem;
  margin: 0.5rem 0;
  border-radius: var(--radius);
  background: hsl(var(--muted));
  /* color: hsl(var(--muted-foreground)); */
  position: relative;
}

blockquote p {
  margin-inline-start: 1rem;
}

blockquote::before {
  content: "";
  width: 0.25rem;
  background: red;
  border-radius: var(--radius);
  margin-right: 1rem;

  position: absolute;
  left: 1rem;
  top: 1rem;
  bottom: 1rem;
}

.softborder {
  box-shadow: 0 0 2px 0 rgba(255, 255, 255, 1);
}

